--- a/index.html
+++ b/index.html
@@ -19,13 +19,18 @@
 </head>
 <body>
 	<div id="head">
-		Books Books Books
+		Eruditication
 	</div>
 	<div class="nav">
 		<ul>
-			<li>About</li>
-			<li>Our Books</li>
-			<li>What We Do</li>
+			<li><a href="#">Sign In</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Our Books</a></li>
+			<li><a href="#">What We Do</a></li>
+			<li><a href="#">Find a Book</a></li>
+			<li><a href="#">Rent a Book</a></li>
+			<li><a href="#">Review a Book</a></li>
+			<li><a href="#">Contact Us</a></li>
 		</ul>
 	</div>
 	<div class="main-image">
