--- a/index.html
+++ b/index.html
@@ -33,13 +33,16 @@
 			<li><a href="#">Contact Us</a></li>
 		</ul>
 	</div>
-	<div class="main-image">
-		<img src="images/books-one.jpg">
+	<div id="main-image">
+		<img id="imgOne" name="image" src="images/books-one.jpg">
+		<!--<img id="imgTwo" src="images/books-two.jpg">
+		<img id="imgThree" src="images/books-three.jpg">-->
 	</div>
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
