--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<li><a href="#">Contact Us</a></li>
 		</ul>
 	</div>
-	<div id="main-image">
+	<div class="container-fluid" id="main-image">
 		<img id="imgOne" name="image" src="images/books-one.jpg">
 		<!--<img id="imgTwo" src="images/books-two.jpg">
 		<img id="imgThree" src="images/books-three.jpg">-->
