GET request begins

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 		<div id="yearSection">
 			<select name="year" id="year">
-			    <option value="">--Select Year--</option>
+			    <option value="0">--Select Year--</option>
 			</select>
 		</div>
 	</div>
