--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 			    <option value="0">--Select Year--</option>
 			</select>
 		</div>
+		<button type="submit" onclick="submitDropdown()">Submit</button>
 	</div>
 
 	<div class="container">
