toggled and removed
still issues.. need to fully remove div and create new

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			    <option value="0">--Select Year--</option>
 			</select>
 		</div>
-		<button type="submit" onclick="submitDropdown()">Submit</button>
+		<button type="button" onclick="submitDropdown()">Submit</button>
 	</div>
 
 	<div class="container">
