--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<img id="imgThree" src="images/books-three.jpg">-->
 	</div>
 
-	<div class="container">
+	<div id="dateForm" class="container-fluid">
 		<div id="monthSection">
 		    <select id="month" name="month">
 		        <option selected value="">--Select Month--</option>
