newDiv added. oops

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<li><a href="#">Our Books</a></li>
 			<li><a href="#">What We Do</a></li>
 			<li><a href="#">Find a Book</a></li>
-			<li><a href="#">Find a Bestseller</a></li>
+			<li><a href="#dateForm">Find a Bestseller</a></li>
 			<li><a href="#">Rent a Book</a></li>
 			<li><a href="#">Review a Book</a></li>
 			<li><a href="#">Contact Us</a></li>
