--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<li><a href="#">Our Books</a></li>
 			<li><a href="#">What We Do</a></li>
 			<li><a href="#">Find a Book</a></li>
-			<li><a href="#dateForm">Find a Bestseller</a></li>
+			<li><a href="#find-a-bestseller">Find a Bestseller</a></li>
 			<li><a href="#">Rent a Book</a></li>
 			<li><a href="#">Review a Book</a></li>
 			<li><a href="#">Contact Us</a></li>
@@ -40,71 +40,74 @@
 		<img id="imgThree" src="images/books-three.jpg">-->
 	</div>
 
-	<div id="dateForm" class="container-fluid">
-		<div id="monthSection">
-		    <select id="month" name="month">
-		        <option selected value="">Select Month</option>
-		        <option value="01">January</option>
-		        <option value="02">February</option>
-		        <option value="03">March</option>
-		        <option value="04">April</option>
-		        <option value="05">May</option>
-		        <option value="06">June</option>
-		        <option value="07">July</option>
-		        <option value="08">August</option>
-		        <option value="09">September</option>
-		        <option value="10">October</option>
-		        <option value="11">November</option>
-		        <option value="12">December</option>
-		    </select>
-		</div>
+	<div id="find-a-bestseller" class="container-fluid">
+		<h1>Find A Bestseller</h1>
+		<div id="dateForm">
+			<div id="monthSection">
+			    <select id="month" name="month">
+			        <option selected value="">Select Month</option>
+			        <option value="01">January</option>
+			        <option value="02">February</option>
+			        <option value="03">March</option>
+			        <option value="04">April</option>
+			        <option value="05">May</option>
+			        <option value="06">June</option>
+			        <option value="07">July</option>
+			        <option value="08">August</option>
+			        <option value="09">September</option>
+			        <option value="10">October</option>
+			        <option value="11">November</option>
+			        <option value="12">December</option>
+			    </select>
+			</div>
 
-		<div id="daySection">
-		    <select id="day" name="day">
-		        <option selected value="">Select Day</option>
-		        <option value="01">1</option>
-			    <option value="02">2</option>
-			    <option value="03">3</option>
-			    <option value="04">4</option>
-			    <option value="05">5</option>
-			    <option value="06">6</option>
-			    <option value="07">7</option>
-			    <option value="08">8</option>    
-			    <option value="09">9</option>
-			    <option value="10">10</option>
-			    <option value="11">11</option>
-			    <option value="12">12</option>
-			    <option value="13">13</option>
-			    <option value="14">14</option>
-			    <option value="15">15</option>    
-			    <option value="16">16</option>
-			    <option value="17">17</option>
-			    <option value="18">18</option>    
-			    <option value="19">19</option>
-			    <option value="20">20</option>
-			    <option value="21">21</option>
-			    <option value="22">22</option>
-			    <option value="23">23</option>
-			    <option value="24">24</option>
-			    <option value="25">25</option>    
-			    <option value="26">26</option>
-			    <option value="27">27</option>
-			    <option value="28">28</option>
-			    <option value="29">29</option>
-			    <option value="30">30</option>
-		    	<option value="31">31</option>
-		    </select>
-		</div>
+			<div id="daySection">
+			    <select id="day" name="day">
+			        <option selected value="">Select Day</option>
+			        <option value="01">1</option>
+				    <option value="02">2</option>
+				    <option value="03">3</option>
+				    <option value="04">4</option>
+				    <option value="05">5</option>
+				    <option value="06">6</option>
+				    <option value="07">7</option>
+				    <option value="08">8</option>    
+				    <option value="09">9</option>
+				    <option value="10">10</option>
+				    <option value="11">11</option>
+				    <option value="12">12</option>
+				    <option value="13">13</option>
+				    <option value="14">14</option>
+				    <option value="15">15</option>    
+				    <option value="16">16</option>
+				    <option value="17">17</option>
+				    <option value="18">18</option>    
+				    <option value="19">19</option>
+				    <option value="20">20</option>
+				    <option value="21">21</option>
+				    <option value="22">22</option>
+				    <option value="23">23</option>
+				    <option value="24">24</option>
+				    <option value="25">25</option>    
+				    <option value="26">26</option>
+				    <option value="27">27</option>
+				    <option value="28">28</option>
+				    <option value="29">29</option>
+				    <option value="30">30</option>
+			    	<option value="31">31</option>
+			    </select>
+			</div>
 
-		<div id="yearSection">
-			<select name="year" id="year">
-			    <option value="0">Select Year</option>
-			</select>
+			<div id="yearSection">
+				<select name="year" id="year">
+				    <option value="0">Select Year</option>
+				</select>
+			</div>
+			<div id="buttonSection">
+				<button type="button" onclick="submitDropdown()">Submit</button>
+			</div>
 		</div>
-		<div id="buttonSection">
-			<button type="button" onclick="submitDropdown()">Submit</button>
-		</div>
-	</div>
+	</div>	
 
 
 	<div class="container-fluid pull-left" id="bestSellerResults">
